/*
 * This file is part of the NUbots Codebase.
 *
 * The NUbots Codebase is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * The NUbots Codebase is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with the NUbots Codebase.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Copyright 2013 NUBots <nubots@nubots.net>
 */
syntax = "proto3";

package message.behaviour.proto;

import "Vector.proto";

message MotionCommand {
    // Defines the possible types of motion command:
    enum Type {
        StandStill = 0;    // Stop moving and just stand still, (equivalent to a VelocityCommand of {0} m/s).
        WalkToState = 1;   // Walk to a given position and heading on the field, avoiding obstacles.
        BallApproach = 2;  // Approach the ball, ready to perform a forward kick toward the given kickTarget. Avoids obstacles.
        DirectCommand = 3; // Stop all current motion and directly send the given WalkCommand to the WalkEngine.
    }

    // The type of this motion command:
    Type type = 1;

    // Required data for WalkToState command:
    vec2 goalState = 2;

    // Required data for WalkToBall command:
    vec2 kickTarget = 3;

    // Required data for DirectCommand command:
    vec3 walkCommand = 4;
}

/*
namespace message {
namespace behaviour {

    using utility::math::matrix::Transform2D;

    struct MotionCommand {
    public:
        MotionCommand(const MotionCommand& c) : goalState(), walkCommand() {
            *this = c;
        }

        static MotionCommand StandStill() {
            MotionCommand cmd;
            cmd.type = Type::StandStill;
            return cmd;
        }

        static MotionCommand WalkToState(Transform2D goalState_) {
            MotionCommand cmd;
            cmd.type = Type::WalkToState;
            cmd.goalState = goalState_;
            return cmd;
        }

        static MotionCommand BallApproach(arma::vec2 kickTarget_) {
            MotionCommand cmd;
            cmd.type = Type::BallApproach;
            cmd.kickTarget = kickTarget_;
            return cmd;
        }

        static MotionCommand DirectCommand(Transform2D walkCommand_) {
            MotionCommand cmd;
            cmd.type = Type::DirectCommand;
            cmd.walkCommand = walkCommand_;
            return cmd;
        }

        // TODO: Create accessor methods that throw errors if the data
        // accessed does not correspond to the command type?

        // Note: We used to use more generic goal and kickTarget types, but
        // these have been removed for simplicity.
        // // What to face towards upon reaching the goal.
        // // enum class TargetType {
        // //     WayPoint,
        // //     Ball
        // // };
        // // TargetType targetLookAt = WayPoint;
    };
}
}

#endif
*/